// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5 0l8 8-8 8-.75-.75L11.5 8 4.25.75z"
  />
</Icon>
`;

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M12 0L4 8l8 8 .75-.75L5.5 8 12.75.75z"
  />
</Icon>
`;

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5 0l8 8-8 8-.75-.75L11.5 8 4.25.75z"
  />
</Icon>
`;

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5 0l8 8-8 8-.75-.75L11.5 8 4.25.75z"
  />
</Icon>
`;

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M12 0L4 8l8 8 .75-.75L5.5 8 12.75.75z"
  />
</Icon>
`;

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 2.clickable 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5 0l8 8-8 8-.75-.75L11.5 8 4.25.75z"
  />
</Icon>
`;

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5 0l8 8-8 8-.75-.75L11.5 8 4.25.75z"
  />
</Icon>
`;

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M12 0L4 8l8 8 .75-.75L5.5 8 12.75.75z"
  />
</Icon>
`;

exports[`ChevronThinIcon [common] example testing should match snapshot(s) for 3.disabled 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-ChevronThinIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M5 0l8 8-8 8-.75-.75L11.5 8 4.25.75z"
  />
</Icon>
`;
